# bastion

./: .env.example  .gitignore  Bastion_Ch4_Eval_Runbook.md  CLAUDE.md  README.md  api.py  bastion-api.service  bastion.sh  dev.sh  main.py  pyproject.toml  requirements.txt  setup.sh  sync_knowledge.sh  upgrade.sh
apps/bastion-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/cli/: main.py
bastion/: agent.py  compaction.py  kg_context.py  playbook.py  prompt.py  rag.py  skills.py  verify.py
config/: params.yaml
docker/: docker-compose.yaml
docs/: plan.md  progress.md  rebuild_prompt_250603.md
docs/analysis/: cost-tracking.md  hook-system.md  memory-system.md  permission-model.md  prompt-architecture.md  tool-system.md
docs/proposals/: 01-prompt-engine.md  02-prompt-engineering.md
eval-tw2/: LOOP.md  REPORT-lab.md  REPORT-runner.md  REPORT.md  STATE.md  lab_ledger.json  ledger.json  runner_ledger.json
eval-tw2/findings/: F6-readonly-check-blocked.md  F7-nondeterminism.md  F8-subagent-model-hardcoded.md  F9-llm-timeout-rootcause.md
eval-tw2/lab_runs/: agent-ir-adv-week01-s1.ndjson  agent-ir-adv-week01-s2.ndjson  agent-ir-adv-week01-s3.ndjson  agent-ir-adv-week01-s4.ndjson  agent-ir-adv-week01-s5.ndjson  agent-ir-adv-week02-s1.ndjson  agent-ir-adv-week02-s2.ndjson  (+1548 more)
harness/: eval_reset.sh  run_eval.py
logs/: 3b14283acbc6.json  6b4d86a09f4c.json  e2893bcf35d7.json  f872ff58e4e2.json
reports/: REPORT.md  preflight.md
scripts/: deploy-bastion.sh
scripts/eval/: loop.py  (+5 more)
state/: ledger.json  nft_baseline.txt
(+221 files in other folders)
