[project]
name = "bastion"
version = "0.1.0"
description = "실무 운영/보안 AI 에이전트 시스템"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "paramiko>=3.0.0",
]

[project.scripts]
bastion = "apps.cli.main:main"
